add comments & @import app variables & current stylz

--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,1 +1,8 @@
+// This is our CSS framework
 @import "_bagpakk";
+
+// Override bagpakk defaults & app spicific variables 
+@import "_variables";
+
+// Current styles
+@import "_current";
