--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -7811,7 +7811,8 @@ body {
 }
 
 .container {
-  margin: 0 auto;
+  margin: 0 auto 40px auto;
+  padding-bottom: 20px;
   background-color: #fff;
   border-left: 1px solid #ccc;
   border-bottom: 1px solid #ccc;
