--- a/css/application.css
+++ b/css/application.css
@@ -83,6 +83,7 @@ table {
 #success {
     display: inline-block;
     text-align: justify;
+    /*text-align: left;*/
     margin: 25px 50px 25px 50px;
 }
 a {
