--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1023,6 +1023,11 @@ input[type="password"] {
 
 .br-circ {
   border-radius: 9999px;
+  outline: none;
+
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
 }
 
 .br-100 {
