added space between favorite artist and play count

--- a/css/application.css
+++ b/css/application.css
@@ -110,6 +110,13 @@ a {
     padding-bottom:10px;
 }
 
+.br-circ {
+  outline: none;
+  -webkit-box-shadow: none;
+  -moz-box-shadow: none;
+  box-shadow: none;
+}
+
 .username a {
     color: #404040;
 }
